<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/textViewStepNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="16sp"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutStep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/step_details">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/buttonRemoveStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginStart="8dp"/>
</LinearLayout>